--- a/contact.html
+++ b/contact.html
@@ -237,6 +237,7 @@
         </div>
       </section>
       <!-- contact banner section End -->
+
       <!-- Get in Touch section start  -->
       <section>
         <div class="container m-auto">
@@ -311,6 +312,7 @@
         </div>
       </section>
       <!-- Get in Touch section End  -->
+
       <!-- contact info section Start -->
       <section class="bg-[#F9F9F9]">
         <div class="container mx-auto">
@@ -371,6 +373,7 @@
         </div>
       </section>
       <!-- contact info section End  -->
+
       <!-- Blog section Start  -->
       <section>
         <div class="container mx-auto">
@@ -443,10 +446,13 @@
         </div>
       </section>
       <!-- Blog section End  -->
+
       <!-- footer section Start -->
       <section class="bg-black">
         <div class="container mx-auto">
-          <div class="wrapper flex justify-between gap-10 py-[31px]">
+          <div
+            class="wrapper flex items-start px-10 lg:px-0 lg:justify-between gap-10 flex-col lg:flex-row py-[31px]"
+          >
             <!-- footer-article -->
             <div>
               <img src="./assets/logo_light.png" alt="logo-darkTheme" />
@@ -563,7 +569,7 @@
                 ©Copyright 2020 Techwero Systems.
               </p>
             </div>
-            <div class="flex justify-between items-center gap-15">
+            <div class="flex justify-between items-center gap-5 md:gap-15">
               <p class="text-[10px] text-[#DD3142]">Term of Services</p>
               <p class="text-[10px] text-[#DD3142]">Privacy & policy</p>
             </div>
