--- a/about.html
+++ b/about.html
@@ -237,6 +237,7 @@
         </div>
       </section>
       <!-- about us - banner section End -->
+
       <!-- plumber point section Start  -->
       <section>
         <div class="container m-auto">
@@ -378,23 +379,28 @@
         </div>
       </section>
       <!-- plumber point section End  -->
+
       <!-- commercial section Start -->
       <section>
         <div class="container m-auto">
-          <div class="grid grid-cols-[auto_851px] relative py-10">
-            <div class="absolute top-1/2 -translate-y-1/2">
+          <div
+            class="grid grid-rows-[150px_360px] lg:grid-rows-[389px] lg:grid-cols-[auto_851px] relative py-10"
+          >
+            <div
+              class="absolute top-[70px] left-[35px] lg:top-1/2 lg:-translate-y-1/2"
+            >
               <img
                 src="./assets/commercial_image.png"
                 alt="commercial_image "
-                class="w-[630px] h-[314px]"
+                class="object-cover w-[410px] h-[260px] lg:w-[630px] lg:h-[314px]"
               />
             </div>
-            <div></div>
+            <div class="blank-div"></div>
             <div
-              class="bg-[#DD3142] h-[389px] flex justify-end items-center p-13"
+              class="bg-[#DD3142] h-[360px] lg:h-[389px] flex justify-center items-end lg:justify-end lg:items-center p-8 lg:p-13"
             >
               <div>
-                <h1 class="font-bold text-[44px] text-white">
+                <h1 class="font-bold text-[38px] lg:text-[44px] text-white">
                   Commercial Service
                 </h1>
                 <p class="text-sm text-white max-w-[432px]">
@@ -410,6 +416,7 @@
         </div>
       </section>
       <!-- commercial section End  -->
+
       <!-- Team Section Start  -->
       <section>
         <div class="container mx-auto">
@@ -425,7 +432,9 @@
               ever since the 1500s, when an unknown printer took a galley of
               type and scrambled it to make a type specimen book.
             </p>
-            <div class="flex justify-between items-center gap-10 mt-[45px]">
+            <div
+              class="flex flex-col lg:flex-row justify-between items-center gap-20 lg:gap-10 mt-[45px]"
+            >
               <!-- card 1 -->
               <div class="relative flex flex-col items-center">
                 <img
@@ -511,9 +520,10 @@
         </div>
       </section>
       <!-- Team Section End -->
+
       <!-- testimonial section Start  -->
       <section
-        class="bg-[url(../assets/testimonial-bg.jpg)] min-h-[316px] bg-cover bg-no-repeat bg-center relative"
+        class="hidden md:block bg-[url(../assets/testimonial-bg.jpg)] min-h-[316px] bg-cover bg-no-repeat bg-center relative"
       >
         <!-- overlay -->
         <div class="overlay absolute inset-0 bg-black/70"></div>
@@ -603,20 +613,23 @@
         </div>
       </section>
       <!-- testimonial section End  -->
+
       <!-- Blog section Start  -->
       <section>
         <div class="container mx-auto">
           <div class="pt-[67px] pb-[50px]">
-            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+            <h2
+              class="text-center md:text-left text-[#0E0E0E] text-3xl font-medium uppercase"
+            >
               our recent blogs
             </h2>
             <div
-              class="blog-card-wrapper flex justify-between items-center pt-[43px]"
+              class="blog-card-wrapper flex justify-between items-center flex-col gap-y-4 lg:flex-row pt-[43px]"
             >
               <!-- blog-card 1 -->
               <div>
                 <img
-                  src="./assets/Mask Group.jpg"
+                  src="./assets/blog1.png"
                   alt="blog-card"
                   class="w-[332px] h-[132px]"
                 />
@@ -635,7 +648,7 @@
               <!-- blog-card 2 -->
               <div>
                 <img
-                  src="./assets/Mask Group.jpg"
+                  src="./assets/blog2.png"
                   alt="blog-card"
                   class="w-[332px] h-[132px]"
                 />
@@ -654,7 +667,7 @@
               <!-- blog-card 3 -->
               <div>
                 <img
-                  src="./assets/Mask Group.jpg"
+                  src="./assets/blog1.png"
                   alt="blog-card"
                   class="w-[332px] h-[132px]"
                 />
@@ -675,10 +688,13 @@
         </div>
       </section>
       <!-- Blog section End  -->
+
       <!-- footer section Start -->
       <section class="bg-black">
         <div class="container mx-auto">
-          <div class="wrapper flex justify-between gap-10 py-[31px]">
+          <div
+            class="wrapper flex items-start px-10 lg:px-0 lg:justify-between gap-10 flex-col lg:flex-row py-[31px]"
+          >
             <!-- footer-article -->
             <div>
               <img src="./assets/logo_light.png" alt="logo-darkTheme" />
@@ -786,7 +802,9 @@
           </div>
         </div>
       </section>
+
       <hr class="h-0.5 bg-white" />
+
       <footer class="bg-black">
         <div class="container mx-auto">
           <div class="flex justify-between items-center py-3">
@@ -795,7 +813,7 @@
                 ©Copyright 2020 Techwero Systems.
               </p>
             </div>
-            <div class="flex justify-between items-center gap-15">
+            <div class="flex justify-between items-center gap-5 md:gap-15">
               <p class="text-[10px] text-[#DD3142]">Term of Services</p>
               <p class="text-[10px] text-[#DD3142]">Privacy & policy</p>
             </div>
