--- a/index.html
+++ b/index.html
@@ -214,44 +214,53 @@
       <!-- Hero section Start -->
       <section class="bg-[#FFFFFF]">
         <div class="container mx-auto">
-          <div class="flex justify-between">
+          <div
+            class="flex flex-col-reverse items-center md:flex-row md:justify-between"
+          >
             <!-- left side contact  -->
-            <div class="mt-[153px] leading-14">
-              <h1 class="font-hero text-[44px] font-extrabold uppercase">
+            <div
+              class="flex flex-col items-center mt-[80px] lg:mt-[153px] leading-14 lg:items-start"
+            >
+              <h1
+                class="font-hero text-[38px] lg:text-[44px] font-extrabold uppercase"
+              >
                 Call us &nbsp;for any
               </h1>
-              <h1 class="font-hero text-[44px] font-medium uppercase">
+              <h1
+                class="font-hero text-[38px] lg:text-[44px] font-medium uppercase"
+              >
                 Plumbing Needs
               </h1>
               <h3
-                class="font-hero text-[34px] font-extrabold mt-[7px] tracking-tighter"
+                class="font-hero text-[28px] lg:text-[34px] font-extrabold mt-[7px] tracking-tighter"
               >
                 +1800-9938-2839
               </h3>
               <button class="btn">SEe all Service</button>
             </div>
             <!-- right side figure -->
-            <div class="flex items-center mt-[100px] relative">
+            <div class="flex items-center ml-[250px] mt-[100px] relative">
               <img
                 src="./assets/image 10.png"
                 alt="figure"
-                class="w-[302px] h-[436px] absolute -left-[268px] -top-[51px] z-10"
+                class="w-[202px] lg:w-[302px] h-[336px] lg:h-[436px] absolute -left-[268px] -top-[51px] z-10 object-cover"
               />
               <img
                 src="./assets/image 9.png"
                 alt="figure"
-                class="w-[390px] h-[341px]"
+                class="h-[241px] lg:w-[390px] lg:h-[341px] object-cover"
               />
             </div>
           </div>
         </div>
       </section>
       <!-- Hero section End -->
+
       <!-- Servise section Start  -->
       <section class="bg-[#DD3142] mt-[44px]">
         <div class="container mx-auto">
           <div
-            class="card-wrapper min-h-[297px] flex justify-center items-center gap-[98px] pt-[35px]"
+            class="card-wrapper min-h-[297px] pt-[35px] flex justify-center items-center gap-[60px] pb-[35px] lg:pb-0 lg:gap-[98px] flex-col lg:flex-row"
           >
             <!-- card 1 -->
             <div
@@ -310,11 +319,16 @@
         </div>
       </section>
       <!-- Service section End -->
+
       <!-- welcome section Start -->
       <section>
         <div class="container mx-auto my-[76px]">
           <div class="relative">
-            <img src="./assets/video.jpg" alt="image" class="h-[407px]" />
+            <img
+              src="./assets/video.jpg"
+              alt="image"
+              class="h-[407px] object-cover"
+            />
             <div
               class="w-[542px] h-[293px] bg-white/70 absolute left-0 top-14 pl-[49px]"
             >
@@ -333,10 +347,13 @@
         </div>
       </section>
       <!-- Welcome section End -->
+
       <!-- History section Start -->
       <section class="bg-[#DD3142]">
         <div class="container m-auto">
-          <div class="wrapper min-h-[389px] flex justify-between items-center">
+          <div
+            class="wrapper min-h-[389px] flex justify-between items-center flex-col py-[40px] lg:flex-row lg:py-0"
+          >
             <!-- left-side-figure -->
             <div class="figure">
               <img
@@ -347,7 +364,7 @@
             </div>
             <!-- right-side-article -->
             <div class="article pr-3">
-              <h2 class="font-bold text-[44px] text-white pb-3">
+              <h2 class="font-bold text-[38px] lg:text-[44px] text-white pb-3">
                 Our Company History
               </h2>
               <p class="w-[432px] text-sm text-white leading-4">
@@ -370,6 +387,7 @@
         </div>
       </section>
       <!-- History section End -->
+
       <!-- Plumber point start -->
       <section>
         <div class="container mx-auto">
@@ -387,7 +405,9 @@
               ever since the 1500s, when an unknown printer took a galley of
               type and scrambled it to make a type specimen book.
             </p>
-            <div class="grid grid-cols-4 gap-x-[168px] gap-y-[29px] mt-[33px]">
+            <div
+              class="grid grid-cols-2 lg:grid-cols-4 gap-x-[100px] lg:gap-x-[168px] gap-y-[20px] lg:gap-y-[29px] mt-[33px]"
+            >
               <div class="radio-items flex items-center justify-center gap-2.5">
                 <img
                   src="./assets/radio.svg"
@@ -457,6 +477,7 @@
         </div>
       </section>
       <!-- Plumber point End -->
+
       <!-- figure start -->
       <section>
         <div
@@ -464,6 +485,7 @@
         ></div>
       </section>
       <!-- figure End -->
+
       <!-- Team Section Start  -->
       <section>
         <div class="container mx-auto">
@@ -479,7 +501,9 @@
               ever since the 1500s, when an unknown printer took a galley of
               type and scrambled it to make a type specimen book.
             </p>
-            <div class="flex justify-between items-center gap-10 mt-[45px]">
+            <div
+              class="flex flex-col lg:flex-row justify-between items-center gap-20 lg:gap-10 mt-[45px]"
+            >
               <!-- card 1 -->
               <div class="relative flex flex-col items-center">
                 <img
@@ -565,9 +589,10 @@
         </div>
       </section>
       <!-- Team Section End -->
+
       <!-- testimonial section Start  -->
       <section
-        class="bg-[url(../assets/testimonial-bg.jpg)] min-h-[316px] bg-cover bg-no-repeat bg-center relative"
+        class="hidden md:block bg-[url(../assets/testimonial-bg.jpg)] min-h-[316px] bg-cover bg-no-repeat bg-center relative"
       >
         <!-- overlay -->
         <div class="overlay absolute inset-0 bg-black/70"></div>
@@ -657,15 +682,18 @@
         </div>
       </section>
       <!-- testimonial section End  -->
+
       <!-- Blog section Start  -->
       <section>
         <div class="container mx-auto">
           <div class="pt-[67px] pb-[50px]">
-            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+            <h2
+              class="text-center md:text-left text-[#0E0E0E] text-3xl font-medium uppercase"
+            >
               our recent blogs
             </h2>
             <div
-              class="blog-card-wrapper flex justify-between items-center pt-[43px]"
+              class="blog-card-wrapper flex justify-between items-center flex-col gap-y-4 lg:flex-row pt-[43px]"
             >
               <!-- blog-card 1 -->
               <div>
@@ -729,10 +757,13 @@
         </div>
       </section>
       <!-- Blog section End  -->
+
       <!-- footer section Start -->
       <section class="bg-black">
         <div class="container mx-auto">
-          <div class="wrapper flex justify-between gap-10 py-[31px]">
+          <div
+            class="wrapper flex items-start px-10 lg:px-0 lg:justify-between gap-10 flex-col lg:flex-row py-[31px]"
+          >
             <!-- footer-article -->
             <div>
               <img src="./assets/logo_light.png" alt="logo-darkTheme" />
@@ -840,7 +871,9 @@
           </div>
         </div>
       </section>
+
       <hr class="h-0.5 bg-white" />
+
       <footer class="bg-black">
         <div class="container mx-auto">
           <div class="flex justify-between items-center py-3">
@@ -849,7 +882,7 @@
                 ©Copyright 2020 Techwero Systems.
               </p>
             </div>
-            <div class="flex justify-between items-center gap-15">
+            <div class="flex justify-between items-center gap-5 md:gap-15">
               <p class="text-[10px] text-[#DD3142]">Term of Services</p>
               <p class="text-[10px] text-[#DD3142]">Privacy & policy</p>
             </div>
