--- a/service.html
+++ b/service.html
@@ -237,6 +237,7 @@
         </div>
       </section>
       <!-- about us - banner section End -->
+
       <!-- our service section Start -->
       <section>
         <div class="container m-auto py-[60px]">
@@ -524,6 +525,7 @@
         </div>
       </section>
       <!-- our service section End  -->
+
       <!-- Team Section Start  -->
       <section>
         <div class="container mx-auto">
@@ -539,7 +541,9 @@
               ever since the 1500s, when an unknown printer took a galley of
               type and scrambled it to make a type specimen book.
             </p>
-            <div class="flex justify-between items-center gap-10 mt-[45px]">
+            <div
+              class="flex flex-col lg:flex-row justify-between items-center gap-20 lg:gap-10 mt-[45px]"
+            >
               <!-- card 1 -->
               <div class="relative flex flex-col items-center">
                 <img
@@ -625,9 +629,10 @@
         </div>
       </section>
       <!-- Team Section End -->
+
       <!-- testimonial section Start  -->
       <section
-        class="bg-[url(../assets/testimonial-bg.jpg)] min-h-[316px] bg-cover bg-no-repeat bg-center relative"
+        class="hidden md:block bg-[url(../assets/testimonial-bg.jpg)] min-h-[316px] bg-cover bg-no-repeat bg-center relative"
       >
         <!-- overlay -->
         <div class="overlay absolute inset-0 bg-black/70"></div>
@@ -717,20 +722,23 @@
         </div>
       </section>
       <!-- testimonial section End  -->
+
       <!-- Blog section Start  -->
       <section>
         <div class="container mx-auto">
           <div class="pt-[67px] pb-[50px]">
-            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+            <h2
+              class="text-center md:text-left text-[#0E0E0E] text-3xl font-medium uppercase"
+            >
               our recent blogs
             </h2>
             <div
-              class="blog-card-wrapper flex justify-between items-center pt-[43px]"
+              class="blog-card-wrapper flex justify-between items-center flex-col gap-y-4 lg:flex-row pt-[43px]"
             >
               <!-- blog-card 1 -->
               <div>
                 <img
-                  src="./assets/Mask Group.jpg"
+                  src="./assets/blog1.png"
                   alt="blog-card"
                   class="w-[332px] h-[132px]"
                 />
@@ -749,7 +757,7 @@
               <!-- blog-card 2 -->
               <div>
                 <img
-                  src="./assets/Mask Group.jpg"
+                  src="./assets/blog2.png"
                   alt="blog-card"
                   class="w-[332px] h-[132px]"
                 />
@@ -768,7 +776,7 @@
               <!-- blog-card 3 -->
               <div>
                 <img
-                  src="./assets/Mask Group.jpg"
+                  src="./assets/blog1.png"
                   alt="blog-card"
                   class="w-[332px] h-[132px]"
                 />
@@ -789,10 +797,13 @@
         </div>
       </section>
       <!-- Blog section End  -->
+
       <!-- footer section Start -->
       <section class="bg-black">
         <div class="container mx-auto">
-          <div class="wrapper flex justify-between gap-10 py-[31px]">
+          <div
+            class="wrapper flex items-start px-10 lg:px-0 lg:justify-between gap-10 flex-col lg:flex-row py-[31px]"
+          >
             <!-- footer-article -->
             <div>
               <img src="./assets/logo_light.png" alt="logo-darkTheme" />
@@ -900,7 +911,9 @@
           </div>
         </div>
       </section>
+
       <hr class="h-0.5 bg-white" />
+
       <footer class="bg-black">
         <div class="container mx-auto">
           <div class="flex justify-between items-center py-3">
@@ -909,7 +922,7 @@
                 ©Copyright 2020 Techwero Systems.
               </p>
             </div>
-            <div class="flex justify-between items-center gap-15">
+            <div class="flex justify-between items-center gap-5 md:gap-15">
               <p class="text-[10px] text-[#DD3142]">Term of Services</p>
               <p class="text-[10px] text-[#DD3142]">Privacy & policy</p>
             </div>
