responsive service.html done

--- a/service.html
+++ b/service.html
@@ -256,7 +256,9 @@
             </p>
           </div>
           <!-- cards -->
-          <div class="card-wrapper grid grid-cols-4 grid-rows-3 gap-[17px]">
+          <div
+            class="card-wrapper justify-self-center grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 grid-rows-3 gap-[17px]"
+          >
             <!-- card 1 -->
             <div
               class="w-[280px] h-[280px] rounded-sm shadow-md flex flex-col justify-center items-center"
