responsive contact.html done

--- a/contact.html
+++ b/contact.html
@@ -302,7 +302,7 @@
               <div class="flex justify-end items-center py-[33px]">
                 <button
                   type="submit"
-                  class="w-[214px] h-[52px] rounded-full font-primary font-bold text-xl text-white leading-6 uppercase bg-[#DD3142] hover:cursor-pointer hover:border-1"
+                  class="w-[180px] lg:w-[214px] h-[48px] lg:h-[52px] rounded-full font-primary font-bold text-md lg:text-xl text-white leading-6 uppercase bg-[#DD3142] hover:cursor-pointer hover:border-1"
                 >
                   Send A MEssage
                 </button>
@@ -317,7 +317,7 @@
       <section class="bg-[#F9F9F9]">
         <div class="container mx-auto">
           <div
-            class="cinfo-wrapper flex justify-between items-center py-[33px]"
+            class="cinfo-wrapper flex flex-col-reverse lg:flex-row justify-between items-start lg:items-center gap-[20px] py-[33px]"
           >
             <!-- left side info -->
             <div>
@@ -378,11 +378,13 @@
       <section>
         <div class="container mx-auto">
           <div class="pt-[67px] pb-[50px]">
-            <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
+            <h2
+              class="text-[#0E0E0E] text-3xl font-medium uppercase text-center lg:text-left"
+            >
               our recent blogs
             </h2>
             <div
-              class="blog-card-wrapper flex justify-between items-center pt-[43px]"
+              class="blog-card-wrapper flex flex-col lg:flex-row justify-between items-center gap-[20px] pt-[43px]"
             >
               <!-- blog-card 1 -->
               <div>
