update navbar and fix button and commercial section

--- a/contact.html
+++ b/contact.html
@@ -366,7 +366,7 @@
               <img
                 src="./assets/map.jpg"
                 alt="map"
-                class="w-[661px] h-[354px]"
+                class="w-[661px] h-[354px] object-cover"
               />
             </div>
           </div>
@@ -464,10 +464,23 @@
                 ever since the 1500s, when an unknown printer took a galley of
                 type and scrambled it to make a type specimen book.
               </p>
+
               <div class="social-media-icons flex items-center gap-5">
-                <img src="./assets/fb.svg" alt="facebook" />
-                <img src="./assets/google.svg" alt="google" />
-                <img src="./assets/twitter.svg" alt="twitter" />
+                <a
+                  href="https://www.facebook.com/"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/fb.svg" alt="facebook"
+                /></a>
+                <a
+                  href="https://www.google.com/"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/google.svg" alt="google"
+                /></a>
+                <a
+                  href="https://x.com/?lang=en"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/twitter.svg" alt="twitter" />
+                </a>
               </div>
             </div>
             <!-- footer-service -->
@@ -585,6 +598,7 @@
     <script src="./JS/jquery-3.7.1.min.js"></script>
     <script src="./JS/slick.min.js"></script>
     <script src="./JS/main.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
 
