--- a/service.html
+++ b/service.html
@@ -816,9 +816,21 @@
                 type and scrambled it to make a type specimen book.
               </p>
               <div class="social-media-icons flex items-center gap-5">
-                <img src="./assets/fb.svg" alt="facebook" />
-                <img src="./assets/google.svg" alt="google" />
-                <img src="./assets/twitter.svg" alt="twitter" />
+                <a
+                  href="https://www.facebook.com/"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/fb.svg" alt="facebook"
+                /></a>
+                <a
+                  href="https://www.google.com/"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/google.svg" alt="google"
+                /></a>
+                <a
+                  href="https://x.com/?lang=en"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/twitter.svg" alt="twitter" />
+                </a>
               </div>
             </div>
             <!-- footer-service -->
@@ -938,6 +950,7 @@
     <script src="./JS/jquery-3.7.1.min.js"></script>
     <script src="./JS/slick.min.js"></script>
     <script src="./JS/main.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
 
