--- a/about.html
+++ b/about.html
@@ -384,20 +384,20 @@
       <section>
         <div class="container m-auto">
           <div
-            class="grid grid-rows-[150px_360px] lg:grid-rows-[389px] lg:grid-cols-[auto_851px] relative py-10"
+            class="grid grid-rows-[80px_360px] lg:grid-rows-[389px] lg:grid-cols-[auto_851px] relative lg:py-10"
           >
             <div
-              class="absolute top-[70px] left-[35px] lg:top-1/2 lg:-translate-y-1/2"
+              class="absolute top-[20%] left-1/2 -translate-1/2 lg:left-0 lg:-translate-0 lg:top-1/2 lg:-translate-y-1/2 z-20 object-center"
             >
               <img
                 src="./assets/commercial_image.png"
                 alt="commercial_image "
-                class="object-cover w-[410px] h-[260px] lg:w-[630px] lg:h-[314px]"
+                class="object-cover min-w-[300px] lg:w-[630px] lg:h-[314px]"
               />
             </div>
             <div class="blank-div"></div>
             <div
-              class="bg-[#DD3142] h-[360px] lg:h-[389px] flex justify-center items-end lg:justify-end lg:items-center p-8 lg:p-13"
+              class="bg-[#DD3142] h-[300px] lg:h-[389px] flex justify-center items-end lg:justify-end lg:items-center p-8 lg:p-13"
             >
               <div>
                 <h1 class="font-bold text-[38px] lg:text-[44px] text-white">
@@ -420,7 +420,7 @@
       <!-- Team Section Start  -->
       <section>
         <div class="container mx-auto">
-          <div class="pt-[63px] pb-[67px] flex flex-col items-center">
+          <div class="pt-5 lg:pt-[63px] pb-[67px] flex flex-col items-center">
             <h2 class="text-[#0E0E0E] text-3xl font-medium uppercase">
               Our Dedicated Team
             </h2>
@@ -705,9 +705,21 @@
                 type and scrambled it to make a type specimen book.
               </p>
               <div class="social-media-icons flex items-center gap-5">
-                <img src="./assets/fb.svg" alt="facebook" />
-                <img src="./assets/google.svg" alt="google" />
-                <img src="./assets/twitter.svg" alt="twitter" />
+                <a
+                  href="https://www.facebook.com/"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/fb.svg" alt="facebook"
+                /></a>
+                <a
+                  href="https://www.google.com/"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/google.svg" alt="google"
+                /></a>
+                <a
+                  href="https://x.com/?lang=en"
+                  class="duration-200 hover:scale-130"
+                  ><img src="./assets/twitter.svg" alt="twitter" />
+                </a>
               </div>
             </div>
             <!-- footer-service -->
@@ -827,6 +839,7 @@
     <script src="./JS/jquery-3.7.1.min.js"></script>
     <script src="./JS/slick.min.js"></script>
     <script src="./JS/main.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
 
